<resources>
    <string name="app_name">Exam 3</string>
    <string name="name">name:</string>
    <string name="secondname">secondname:</string>
    <string name="email">email:</string>
    <string name="modify">modify</string>
    <string name="modify_user">Modify user:</string>
    <string name="add_user">Add user:</string>
    <string name="add">add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>