<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddUserActivity"
        android:background="@color/dark">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/add_user"
            android:layout_marginTop="10dp"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:lines="1"
            android:hint="@string/name"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/textColor"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etSecondName"

            />


        <EditText
            android:id="@+id/etSecondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/secondname"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/textColor"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/etEmail"

            />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/hintColor"
            android:textColor="@color/textColor"
            app:layout_constraintTop_toBottomOf="@id/etSecondName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnAddUser"

            />

        <Button
            android:id="@+id/btnAddUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>